@@ -8,6 +8,7 @@ config.h.in
 config.log
 config.status
 configure
+fuse-utils.qpg
 listbasic
 rzxcheck
 rzxdump
