@@ -95,4 +95,6 @@ if test "$ac_cv_prog_gcc" = yes; then
     fi
 fi
 
-AC_OUTPUT(Makefile man/Makefile)
+AC_OUTPUT(Makefile \
+fuse-utils.qpg \
+man/Makefile)
