@@ -1,0 +1,135 @@
+<QPG:Generation>
+   <QPG:Options>
+      <QPG:User unattended="yes" verbosity="0" listfiles="yes"/>
+      <QPG:Defaults type="qnx_package"/>
+      <QPG:Source></QPG:Source>
+      <QPG:Release date="today" number="+"/>
+      <QPG:Build></QPG:Build>
+      <QPG:FileSorting strip="yes"/>
+      <QPG:Package targets="standart"/>
+      <QPG:Repository generate="yes"/>
+      <QPG:FinalDir></QPG:FinalDir>
+      <QPG:Cleanup></QPG:Cleanup>
+   </QPG:Options>
+
+   <QPG:Responsible>
+      <QPG:Company>QNX.ORG.RU Community</QPG:Company>
+      <QPG:Department></QPG:Department>
+      <QPG:Group></QPG:Group>
+      <QPG:Team>QNX.ORG.RU Team</QPG:Team>
+      <QPG:Employee>Mike Gorchak</QPG:Employee>
+      <QPG:EmailAddress>mike@malva.ua</QPG:EmailAddress>
+   </QPG:Responsible>
+
+   <QPG:Values>
+      <QPG:Files>
+         <QPG:Add file="./LICENSE" install="LicenseUrl/" handling="repdata"/>
+         <QPG:Add permissions="0755" file="./listbasic" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./rzxdump" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./rzxtool" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./scl2trd" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./snapconv" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./tapeconv" install="/opt/bin/"/>
+         <QPG:Add permissions="0755" file="./tzxlist" install="/opt/bin/"/>
+         <QPG:Add permissions="0644" file="./AUTHORS" install="/usr/doc/fuse-utils/"/>
+         <QPG:Add permissions="0644" file="./Changelog" install="/usr/doc/fuse-utils/"/>
+         <QPG:Add permissions="0644" file="./README" install="/usr/doc/fuse-utils/"/>
+         <QPG:Add permissions="0644" file="./man/listbasic.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/rzxcheck.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/rzxdump.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/rzxtool.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/scl2trd.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/snapconv.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/tapeconv.1" install="/opt/man/man1/"/>
+         <QPG:Add permissions="0644" file="./man/tzxlist.1" install="/opt/man/man1/"/>
+      </QPG:Files>
+
+      <QPG:PackageFilter>
+         <QPM:PackageManifest>
+
+            <QPM:PackageDescription>
+               <QPM:PackageType>Application</QPM:PackageType>
+               <QPM:PackageName>fuse-utils</QPM:PackageName>
+               <QPM:PackageReleaseNumber>1</QPM:PackageReleaseNumber>
+               <QPM:PackageRepository>http://mike.qnx.org.ru/repository</QPM:PackageRepository>
+               <QPM:FileVersion>2.0</QPM:FileVersion>
+            </QPM:PackageDescription>
+
+            <QPM:ProductDescription>
+               <QPM:ProductName>fuse-utils</QPM:ProductName>
+               <QPM:ProductIdentifier>fuse-utils</QPM:ProductIdentifier>
+               <QPM:ProductEmail>pak21-fuse@srcf.ucam.org</QPM:ProductEmail>
+               <QPM:VendorName>public</QPM:VendorName>
+               <QPM:VendorInstallName>public</QPM:VendorInstallName>
+               <QPM:VendorURL>http://www.srcf.ucam.org/~pak21/spectrum/fuse.html</QPM:VendorURL>
+               <QPM:VendorEmbedURL/>
+               <QPM:VendorEmail>pak21-fuse@srcf.ucam.org</QPM:VendorEmail>
+               <QPM:AuthorName>Philip Kendall</QPM:AuthorName>
+               <QPM:AuthorURL>http://www.srcf.ucam.org/~pak21/spectrum/fuse.html</QPM:AuthorURL>
+               <QPM:AuthorEmbedURL/>
+               <QPM:AuthorEmail>pak21-fuse@srcf.ucam.org</QPM:AuthorEmail>
+               <QPM:ProductIconSmall/>
+               <QPM:ProductIconLarge/>
+               <QPM:ProductDescriptionShort>The Fuse utilities are a few tools which may be of occasional use when dealing with ZX Spectrum emulator files.</QPM:ProductDescriptionShort>
+               <QPM:ProductDescriptionLong>The Fuse utilities are a few tools which may be of occasional use when dealing with ZX Spectrum emulator files. They were originally distributed with Fuse, the Free Unix Spectrum Emulator, but are now independent of Fuse and can be used on their own.</QPM:ProductDescriptionLong>
+               <QPM:ProductDescriptionURL>http://www.srcf.ucam.org/~pak21/spectrum/fuse.html</QPM:ProductDescriptionURL>
+               <QPM:ProductDescriptionEmbedURL/>
+            </QPM:ProductDescription>
+
+            <QPM:ReleaseDescription>
+               <QPM:ReleaseVersion>@VERSION@</QPM:ReleaseVersion>
+               <QPM:ReleaseUrgency>High</QPM:ReleaseUrgency>
+               <QPM:ReleaseStability>Stable</QPM:ReleaseStability>
+               <QPM:ReleaseNoteMinor/>
+               <QPM:ReleaseNoteMajor/>
+               <QPM:ReleaseBuild>1</QPM:ReleaseBuild>
+               <QPM:CountryExclude/>
+               <QPM:ReleaseCopyright>GNU General Public License</QPM:ReleaseCopyright>
+            </QPM:ReleaseDescription>
+
+            <QPM:ContentDescription>
+               <QPM:ContentTopic xmlmultiple="true">Games and Diversions/Game Emulators</QPM:ContentTopic>
+               <QPM:ContentKeyword>ZX, spectrum, speccy, utilities, RZX, TZX, SCL, TRD</QPM:ContentKeyword>
+               <QPM:TargetOS>qnx6</QPM:TargetOS>
+               <QPM:HostOS>none</QPM:HostOS>
+               <QPM:DisplayEnvironment xmlmultiple="true">Console</QPM:DisplayEnvironment>
+               <QPM:TargetAudience xmlmultiple="true">User</QPM:TargetAudience>
+            </QPM:ContentDescription>
+            <QPM:LicenseUrl>repdata://LicenseUrl/LICENSE</QPM:LicenseUrl>
+         </QPM:PackageManifest>
+      </QPG:PackageFilter>
+
+      <QPG:PackageFilter proc="none" target="none">
+         <QPM:PackageManifest>
+            <QPM:ProductInstallationDependencies>
+               <QPM:ProductRequirements></QPM:ProductRequirements>
+            </QPM:ProductInstallationDependencies>
+         </QPM:PackageManifest>
+      </QPG:PackageFilter>
+
+      <QPG:PackageFilter proc="x86" target="none">
+         <QPM:PackageManifest>
+            <QPM:ProductInstallationDependencies>
+               <QPM:ProductRequirements></QPM:ProductRequirements>
+            </QPM:ProductInstallationDependencies>
+         </QPM:PackageManifest>
+      </QPG:PackageFilter>
+
+      <QPG:PackageFilter proc="none" target="x86">
+         <QPM:PackageManifest>
+            <QPM:ProductInstallationDependencies>
+               <QPM:ProductRequirements></QPM:ProductRequirements>
+            </QPM:ProductInstallationDependencies>
+         </QPM:PackageManifest>
+      </QPG:PackageFilter>
+
+      <QPG:PackageFilter proc="x86" target="x86">
+         <QPM:PackageManifest>
+            <QPM:ProductInstallationDependencies>
+               <QPM:ProductRequirements></QPM:ProductRequirements>
+            </QPM:ProductInstallationDependencies>
+         </QPM:PackageManifest>
+      </QPG:PackageFilter>
+
+   </QPG:Values>
+</QPG:Generation>
